A5/a5v3-pre/prepos.output
State 8 conflicts: 2 reduce/reduce
State 12 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | expression '\n'

    5 expression: term
    6           | expression '+' expression
    7           | factor

    8 term: factor
    9     | term '*' factor

   10 factor: NUMBER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'*' (42) 9
'+' (43) 6
error (256)
NUMBER (258) 10


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
input (8)
    on left: 1 2, on right: 0 2
line (9)
    on left: 3 4, on right: 2
expression (10)
    on left: 5 6 7, on right: 4 6
term (11)
    on left: 8 9, on right: 5 9
factor (12)
    on left: 10, on right: 7 8 9


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    '\n'    shift, and go to state 4

    line        go to state 5
    expression  go to state 6
    term        go to state 7
    factor      go to state 8


State 2

    0 $accept: input $end .

    $default  accept


State 3

   10 factor: NUMBER .

    $default  reduce using rule 10 (factor)


State 4

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 5

    2 input: input line .

    $default  reduce using rule 2 (input)


State 6

    4 line: expression . '\n'
    6 expression: expression . '+' expression

    '\n'  shift, and go to state 9
    '+'   shift, and go to state 10


State 7

    5 expression: term .
    9 term: term . '*' factor

    '*'  shift, and go to state 11

    $default  reduce using rule 5 (expression)


State 8

    7 expression: factor .
    8 term: factor .

    '\n'      reduce using rule 7 (expression)
    '\n'      [reduce using rule 8 (term)]
    '+'       reduce using rule 7 (expression)
    '+'       [reduce using rule 8 (term)]
    '*'       reduce using rule 8 (term)
    $default  reduce using rule 7 (expression)


State 9

    4 line: expression '\n' .

    $default  reduce using rule 4 (line)


State 10

    6 expression: expression '+' . expression

    NUMBER  shift, and go to state 3

    expression  go to state 12
    term        go to state 7
    factor      go to state 8


State 11

    9 term: term '*' . factor

    NUMBER  shift, and go to state 3

    factor  go to state 13


State 12

    6 expression: expression . '+' expression
    6           | expression '+' expression .

    '+'  shift, and go to state 10

    '+'       [reduce using rule 6 (expression)]
    $default  reduce using rule 6 (expression)


State 13

    9 term: term '*' factor .

    $default  reduce using rule 9 (term)
